# stalwart-lite

./: AGENTS.md  Cargo.toml  PUBLISHING.md  README.md  STALWART-LITE.md  STALWART.md
.github/workflows/: ci.yml  scorecard.yml  test.yml
crates/cli/: Cargo.toml
crates/cli/src/modules/: import.rs
crates/common/src/: lib.rs
crates/common/src/auth/oauth/: config.rs  token.rs
crates/common/src/manager/: boot.rs
crates/dav/src/calendar/: copy_move.rs  delete.rs
crates/http/src/auth/oauth/: auth.rs  registration.rs
crates/jmap/src/push/: set.rs
crates/jmap/src/sieve/: set.rs
crates/nlp/src/classifier/: reservoir.rs
crates/services/src/state_manager/: ece.rs
crates/services/src/task_manager/: merge_threads.rs
crates/smtp/src/outbound/: lookup.rs
crates/smtp/src/queue/: manager.rs
crates/smtp/src/reporting/: mod.rs
crates/store/src/backend/foundationdb/: write.rs
crates/store/src/backend/mysql/: write.rs
crates/store/src/backend/postgres/: write.rs
crates/store/src/backend/rocksdb/: write.rs
crates/trc/event-macro/: Cargo.toml
crates/utils/proc-macros/: Cargo.toml
tests/: Cargo.toml
tests/resources/scripts/: create_test_cluster.sh  create_test_users.sh
tests/src/cluster/: stress.rs
tests/src/jmap/mail/: thread_merge.rs
tests/src/jmap/server/: enterprise.rs
tests/src/store/: ops.rs  query.rs
tests/src/webdav/: mod.rs
