[package]
name = "tests"
version.workspace = true
license.workspace = true
edition = "2024"
publish = false

[features]
#default = ["sqlite", "postgres", "mysql", "rocks", "s3", "redis", "nats", "azure", "foundationdb"]
default = ["sqlite", "postgres", "mysql", "rocks", "s3", "redis"]
#default = ["rocks", "foundationdb"]
sqlite = ["store/sqlite"]
foundationdb = ["store/foundation", "common/foundation"]
postgres = ["store/postgres"]
mysql = ["store/mysql"]
rocks = ["store/rocks"]
s3 = ["store/s3"]
redis = ["store/redis"]
nats = ["store/nats"]
azure = ["store/azure"]

[dev-dependencies]
store = { path = "../crates/store", version = "0.15.6", features = ["test_mode", "enterprise"] , package = "stalwart-store"}
nlp = { path = "../crates/nlp", version = "0.15.6" , package = "stalwart-nlp"}
directory = { path = "../crates/directory", version = "0.15.6", features = ["test_mode", "enterprise"] , package = "stalwart-directory"}
jmap = { path = "../crates/jmap", version = "0.15.6", features = ["test_mode", "enterprise"] , package = "stalwart-jmap"}
jmap_proto = { path = "../crates/jmap-proto", version = "0.15.6" , package = "stalwart-jmap-proto"}
imap = { path = "../crates/imap", version = "0.15.6", features = ["test_mode"] , package = "stalwart-imap"}
imap_proto = { path = "../crates/imap-proto", version = "0.15.6" , package = "stalwart-imap-proto"}
types = { path = "../crates/types", version = "0.15.6" , package = "stalwart-types"}
dav = { path = "../crates/dav", version = "0.15.6", features = ["test_mode"] , package = "stalwart-dav"}
dav-proto = { path = "../crates/dav-proto", version = "0.15.6", features = ["test_mode"] , package = "stalwart-dav-proto"}
groupware = { path = "../crates/groupware", version = "0.15.6", features = ["test_mode"] , package = "stalwart-groupware"}
http = { path = "../crates/http", version = "0.15.6", features = ["test_mode", "enterprise"] , package = "stalwart-http"}
http_proto = { path = "../crates/http-proto", version = "0.15.6" , package = "stalwart-http-proto"}
services = { path = "../crates/services", version = "0.15.6", features = ["test_mode", "enterprise"] , package = "stalwart-services"}
pop3 = { path = "../crates/pop3", version = "0.15.6", features = ["test_mode"] , package = "stalwart-pop3"}
smtp = { path = "../crates/smtp", version = "0.15.6", features = ["test_mode", "enterprise"] , package = "stalwart-smtp"}
common = { path = "../crates/common", version = "0.15.6", features = ["test_mode", "enterprise"] , package = "stalwart-common"}
email = { path = "../crates/email", version = "0.15.6", features = ["test_mode", "enterprise"] , package = "stalwart-email"}
spam-filter = { path = "../crates/spam-filter", version = "0.15.6", features = ["test_mode", "enterprise"] , package = "stalwart-spam-filter"}
migration = { path = "../crates/migration", version = "0.15.6", features = ["test_mode", "enterprise"] , package = "stalwart-migration"}
trc = { path = "../crates/trc", version = "0.15.6", features = ["enterprise"] , package = "stalwart-trc"}
managesieve = { path = "../crates/managesieve", version = "0.15.6", features = ["test_mode", "enterprise"] , package = "stalwart-managesieve"}
utils = { path = "../crates/utils", version = "0.15.6", features = ["test_mode"] , package = "stalwart-utils"}
jmap-client = { version = "0.4", features = ["websockets", "debug", "async"] } 
tokio = { version = "1.47", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23.5", default-features = false, features = ["std", "ring", "tls12"] }
rustls-pemfile = "2.0"
rustls-pki-types = { version = "1" }
csv = "1.1"
rayon = { version = "1.5.1" }
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "multipart", "http2"]}
bytes = "1.4.0"
futures = "0.3"
ece = "2.2"
hyper = { version = "1.0.1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.1", features = ["tokio"] }
http-body-util = "0.1.0"
base64 = "0.22"
ahash = { version = "0.8" }
serial_test = "3.0.0"
num_cpus = "1.15.0"
async-trait = "0.1.68"
chrono = "0.4"
ring = { version = "0.17" }
biscuit = "0.7.0"
form_urlencoded = "1.1.0"
rkyv = { version = "0.8.10", features = ["little_endian"] }
compact_str = "0.9.0"
quick-xml = "0.38"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"
