[package]
name = "stalwart-event-macro"
description = "Event macro support for stalwart"
version.workspace = true
license.workspace = true
repository = "https://github.com/tschk/stalwart-lite"
homepage = "https://github.com/tschk/stalwart-lite"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
